linking to games

--- a/it-costs-money.html
+++ b/it-costs-money.html
@@ -1,8 +1,9 @@
 ---
 layout: default
+permalink: /it-costs-money/
 ---
 
-This is ship-shape.
+This is <em>it costs money to be alive</em>.
 
 <iframe src="/games/it-costs-money.html" width="1024" height="512"> </iframe>
 
