--- a/ship-shape.html
+++ b/ship-shape.html
@@ -1,8 +1,9 @@
 ---
 layout: default
+permalink: /ship-shape/
 ---
 
-This is ship-shape.
+This is <em>ship-shape</em>.
 
-<iframe src="/games/ship-shape.html" width="1024" height="768"> </iframe>
+<iframe src="/games/ship-shape.html" width="1366" height="768"> </iframe>
 
