--- a/it-costs-money.html
+++ b/it-costs-money.html
@@ -1,9 +1,9 @@
 ---
-layout: default
+layout: game
 permalink: /it-costs-money/
+game: it-costs-money
+width: 1024
+height: 512
 ---
 
 This is <em>it costs money to be alive</em>.
-
-<iframe src="/games/it-costs-money.html" width="1024" height="512"> </iframe>
-
