--- a/ship-shape.html
+++ b/ship-shape.html
@@ -1,9 +1,9 @@
 ---
-layout: default
+layout: game
 permalink: /ship-shape/
+game: ship-shape
+width: 1366
+height: 768
 ---
 
 This is <em>ship-shape</em>.
-
-<iframe src="/games/ship-shape.html" width="1366" height="768"> </iframe>
-
